Fixed bug so that drag&drop works on mobile too

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -26,34 +26,9 @@ a:active {
   margin-left: 1.5em;
 }
 
-.button {
-  padding: 0.3em;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
-  border-bottom: 1px solid black;
-  background: none;
-}
-
 body {
   display: flex;
   justify-content: center;
-}
-
-.userInput {
-  padding: 0.3em;
-  margin-right: -4px;
-  max-width: 400px;
-  border-top: 0px;
-  border-right: 0px;
-  border-left: 0px;
-  border-bottom: 1px solid black;
-  display: flex;
-  flex: 1;
-}
-
-.userInput:focus {
-  outline: none;
 }
 
 /*# sourceMappingURL=main.css.map */
