--- a/SCSS/_input.scss
+++ b/SCSS/_input.scss
@@ -1,15 +1,15 @@
-.userInput {
-    padding: 0.3em;
-    margin-right: -4px;
-    max-width: 400px;
-    border-top: 0px;
-    border-right: 0px;
-    border-left: 0px;
-    border-bottom: 1px solid black;
-    display: flex;
-    flex: 1;
-}
+// .userInput {
+//     padding: 0.3em;
+//     margin-right: -4px;
+//     max-width: 400px;
+//     border-top: 0px;
+//     border-right: 0px;
+//     border-left: 0px;
+//     border-bottom: 1px solid black;
+//     display: flex;
+//     flex: 1;
+// }
 
-.userInput:focus {
-    outline: none;
-}
+// .userInput:focus {
+//     outline: none;
+// }
